[package]
name = "solana-bubblemaps-bypassing-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.2.2"
solana-client = "2.2.19"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.16.0"

tokio = { version = "1.21.2", features = ["full"] }

serde = "1.0.145"
serde_json = "1.0.86"

anyhow = "1.0.62"
clap = { version = "4.5.7", features = ["derive"] }
dotenvy = "0.15"
bs58 = "0.4"
libloading = "0.8"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
